[gd_scene load_steps=99 format=3 uid="uid://3ucp1fyr4mf0"]

[ext_resource type="Texture2D" uid="uid://dhrxd7kxqhki" path="res://assets/Enemies/Beholder/PNG/Beholder1/Attack/Beholder1_Attack_full.png" id="1_j27r5"]
[ext_resource type="Script" path="res://scenes/Enemies/Beholder/attack_area.gd" id="1_k2mbd"]
[ext_resource type="Script" path="res://scenes/Enemies/Beholder/beholder.gd" id="1_ugqww"]
[ext_resource type="Texture2D" uid="uid://cmcngter4gev0" path="res://assets/Enemies/Beholder/PNG/Beholder1/Death/Beholder1_Death_full.png" id="2_5movr"]
[ext_resource type="PackedScene" uid="uid://cq8imdmlp7woa" path="res://scenes/Misc/Mine/Gold.tscn" id="2_5vhqi"]
[ext_resource type="Texture2D" uid="uid://dyxanbxopt0tg" path="res://assets/Enemies/Beholder/PNG/Beholder1/Run/Beholder1_Run_full.png" id="3_odsos"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3yn1s"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s457l"]
radius = 22.6667

[sub_resource type="AtlasTexture" id="AtlasTexture_k608k"]
atlas = ExtResource("1_j27r5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2n8q"]
atlas = ExtResource("1_j27r5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccfr6"]
atlas = ExtResource("1_j27r5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48er5"]
atlas = ExtResource("1_j27r5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g5ci"]
atlas = ExtResource("1_j27r5")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60vnv"]
atlas = ExtResource("1_j27r5")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4rdg"]
atlas = ExtResource("1_j27r5")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygvyh"]
atlas = ExtResource("1_j27r5")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ab3"]
atlas = ExtResource("1_j27r5")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rskfo"]
atlas = ExtResource("1_j27r5")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbeqx"]
atlas = ExtResource("1_j27r5")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8auk"]
atlas = ExtResource("1_j27r5")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlgbd"]
atlas = ExtResource("2_5movr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oygr"]
atlas = ExtResource("2_5movr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7epkx"]
atlas = ExtResource("2_5movr")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4btu"]
atlas = ExtResource("2_5movr")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrnr"]
atlas = ExtResource("2_5movr")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24jbk"]
atlas = ExtResource("2_5movr")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kycq"]
atlas = ExtResource("2_5movr")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cujuh"]
atlas = ExtResource("2_5movr")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7np3"]
atlas = ExtResource("2_5movr")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7vem"]
atlas = ExtResource("3_odsos")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qji88"]
atlas = ExtResource("3_odsos")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aqjq"]
atlas = ExtResource("3_odsos")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyg0x"]
atlas = ExtResource("3_odsos")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rejoi"]
atlas = ExtResource("3_odsos")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppdjn"]
atlas = ExtResource("3_odsos")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp8bm"]
atlas = ExtResource("3_odsos")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w886o"]
atlas = ExtResource("3_odsos")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yim7"]
atlas = ExtResource("1_j27r5")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvnon"]
atlas = ExtResource("1_j27r5")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10bok"]
atlas = ExtResource("1_j27r5")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pdkl"]
atlas = ExtResource("1_j27r5")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w60xx"]
atlas = ExtResource("1_j27r5")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ogd"]
atlas = ExtResource("1_j27r5")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vykrj"]
atlas = ExtResource("1_j27r5")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_udv75"]
atlas = ExtResource("1_j27r5")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt8g5"]
atlas = ExtResource("1_j27r5")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1s6r"]
atlas = ExtResource("1_j27r5")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r80s"]
atlas = ExtResource("1_j27r5")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nvd5"]
atlas = ExtResource("1_j27r5")
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15jky"]
atlas = ExtResource("2_5movr")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qxmk"]
atlas = ExtResource("2_5movr")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg7mw"]
atlas = ExtResource("2_5movr")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi5ua"]
atlas = ExtResource("2_5movr")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxnaj"]
atlas = ExtResource("2_5movr")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crkxy"]
atlas = ExtResource("2_5movr")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmb5n"]
atlas = ExtResource("2_5movr")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_px7y2"]
atlas = ExtResource("2_5movr")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cddhy"]
atlas = ExtResource("2_5movr")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3kb"]
atlas = ExtResource("3_odsos")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4drlj"]
atlas = ExtResource("3_odsos")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppy0k"]
atlas = ExtResource("3_odsos")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37dnx"]
atlas = ExtResource("3_odsos")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dod4t"]
atlas = ExtResource("3_odsos")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74wky"]
atlas = ExtResource("3_odsos")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbtg5"]
atlas = ExtResource("3_odsos")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbgu6"]
atlas = ExtResource("3_odsos")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pf61"]
atlas = ExtResource("1_j27r5")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd0ri"]
atlas = ExtResource("1_j27r5")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba4h4"]
atlas = ExtResource("1_j27r5")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_py1t3"]
atlas = ExtResource("1_j27r5")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dukot"]
atlas = ExtResource("1_j27r5")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylq25"]
atlas = ExtResource("1_j27r5")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li04j"]
atlas = ExtResource("1_j27r5")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfb51"]
atlas = ExtResource("1_j27r5")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17yq8"]
atlas = ExtResource("1_j27r5")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_okwlg"]
atlas = ExtResource("1_j27r5")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecwne"]
atlas = ExtResource("1_j27r5")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_264wh"]
atlas = ExtResource("1_j27r5")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n6v0"]
atlas = ExtResource("2_5movr")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hpmv"]
atlas = ExtResource("2_5movr")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axh31"]
atlas = ExtResource("2_5movr")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnul3"]
atlas = ExtResource("2_5movr")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy7fs"]
atlas = ExtResource("2_5movr")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjk8x"]
atlas = ExtResource("2_5movr")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykfeu"]
atlas = ExtResource("2_5movr")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s38wg"]
atlas = ExtResource("2_5movr")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_muwvt"]
atlas = ExtResource("2_5movr")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eceo"]
atlas = ExtResource("3_odsos")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k1lq"]
atlas = ExtResource("3_odsos")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dww7o"]
atlas = ExtResource("3_odsos")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrcql"]
atlas = ExtResource("3_odsos")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_goo1e"]
atlas = ExtResource("3_odsos")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_55cg6"]
atlas = ExtResource("3_odsos")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rbyg"]
atlas = ExtResource("3_odsos")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymb14"]
atlas = ExtResource("3_odsos")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwwe1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k608k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2n8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccfr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48er5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g5ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60vnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4rdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygvyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ab3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rskfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbeqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8auk")
}],
"loop": false,
"name": &"Down Attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlgbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oygr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7epkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4btu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24jbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kycq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cujuh")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_w7np3")
}],
"loop": false,
"name": &"Down Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7vem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qji88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aqjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyg0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rejoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppdjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp8bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w886o")
}],
"loop": true,
"name": &"Down Walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yim7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvnon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10bok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pdkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w60xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ogd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vykrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udv75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt8g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1s6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r80s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nvd5")
}],
"loop": false,
"name": &"Side Attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15jky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qxmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg7mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxnaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crkxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmb5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px7y2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_cddhy")
}],
"loop": false,
"name": &"Side Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq3kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4drlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppy0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37dnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dod4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74wky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbtg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbgu6")
}],
"loop": true,
"name": &"Side Walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pf61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd0ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba4h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py1t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dukot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylq25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li04j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfb51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17yq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okwlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecwne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_264wh")
}],
"loop": false,
"name": &"Up Attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n6v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hpmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axh31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnul3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjk8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykfeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s38wg")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_muwvt")
}],
"loop": false,
"name": &"Up Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eceo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k1lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dww7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrcql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goo1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55cg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rbyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymb14")
}],
"loop": true,
"name": &"Up Walk",
"speed": 7.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nlx7"]
bg_color = Color(0, 0, 0, 0.372549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxr1q"]
bg_color = Color(0.333333, 0, 0, 1)

[node name="Beholder" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_ugqww")
health = 200
speed = 120
damage = 50
gold_spawn_rate = 7
gold = ExtResource("2_5vhqi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_3yn1s")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -10.5)
collision_layer = 0
collision_mask = 3
script = ExtResource("1_k2mbd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, 10.5)
shape = SubResource("CircleShape2D_s457l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
sprite_frames = SubResource("SpriteFrames_jwwe1")
animation = &"Down Attack"
frame = 11
frame_progress = 1.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 2
avoidance_enabled = true
radius = 20.0
max_neighbors = 15
avoidance_layers = 2
avoidance_mask = 2
debug_enabled = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -19.3333
offset_top = -35.6667
offset_right = 363.667
offset_bottom = -8.66667
scale = Vector2(0.1, 0.1)
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_0nlx7")
theme_override_styles/fill = SubResource("StyleBoxFlat_bxr1q")
value = 100.0
show_percentage = false

[connection signal="add_tower" from="." to="." method="_on_add_tower"]
[connection signal="reached" from="." to="." method="_on_reached"]
[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="take_knockback" from="." to="." method="_on_take_knockback"]
[connection signal="unreached" from="." to="." method="_on_unreached"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_body_entered"]
[connection signal="body_exited" from="AttackArea" to="AttackArea" method="_on_body_exited"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
